--- a/app/app.component.scss
+++ b/app/app.component.scss
@@ -1,4 +1,157 @@
+@import "styles/variables.scss";
+
 .app {
   min-height: 100%;
   background-color: white;
 }
+
+.footer, .header {
+  width: 100%;
+  background: $color-blue-0;
+  color: white;
+}
+
+.footer {
+  font-size: 18px;
+  max-width: calc(1024px - 60px);
+  padding: 30px;
+  width: 100%;
+
+  a {
+    color: inherit;
+  }
+}
+
+.header {
+  padding: 5px 0;
+  position: relative;
+
+  .table-cell {
+    vertical-align: middle;
+    padding: 5px;
+  }
+
+  .header-logo-container {
+    width: 100%;
+
+    .app-logo-img-container {
+      .app-logo-img {
+        width: 100%;
+        max-width: 165px;
+        height: auto;
+      }
+    }
+
+    .back-button-container {
+      .back-button {
+        color: white;
+        font-size: 24px;
+      }
+    }
+
+  }
+}
+
+.overbody-container {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.3);
+  opacity: 1;
+  z-index: 20;
+  position: fixed;
+  outline: none !important;
+  overflow-y: auto;
+}
+
+.menu-side-bar {
+  max-width: 1024px;
+  margin: 0 auto;
+  position: fixed;
+  z-index: 21;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+
+  .nav-menu-container {
+    width: 375px;
+    background: rgba(34, 37, 49, 0.95);
+    float: right;
+    position: relative;
+    z-index: 22;
+    height: 100%;
+
+    .nav-menu-icon-container {
+      color: $color-dark;
+      font-size: 105px;
+      padding: 20px 0;
+      line-height: 1em;
+      margin: auto;
+      text-align: center;
+    }
+
+    .nav-menu {
+      vertical-align: middle;
+      text-align: center;
+
+      .nav-menu-item-container {
+        display: inline-block;
+
+        .nav-menu-item {
+          padding: 7px 0;
+          font-size: 20px;
+          text-align: left;
+          position: relative;
+
+          .nav-menu-link {
+            text-decoration: none;
+            color: $color-blue-3;
+            padding-left: 40px;
+
+            &:hover {
+              opacity: 0.7;
+            }
+
+           &:before {
+              position: absolute;
+              color: #fff;
+              font-family: "fontello";
+              font-size: 1.1em;
+              left: 0;
+              top: 6px;
+            }
+            &.nav-job-list:before {
+              content: '\e815';
+            }
+            &.nav-my-job:before {
+              content: '\e811';
+            }
+            &.nav-job-create:before {
+              content: '\e819';
+            }
+            &.nav-faq:before {
+              content: '\e816';
+            }
+            &.nav-contact:before {
+              content: '\e81e';
+            }
+            &.nav-signin:before {
+              content: '\e810';
+            }
+            &.nav-signout:before {
+              content: '\e810';
+            }
+            &.nav-profile:before {
+              content: '\e805';
+            }
+          }
+        }
+      }
+
+    }
+  }
+}
+
+
+
