--- a/app/app.component.html
+++ b/app/app.component.html
@@ -3,6 +3,7 @@
     <a routerLink="/home">Home</a>
     <a routerLink="/about">About</a>
     <a routerLink="/user/register">Register</a>
+    <a routerLink="/user">Profile</a>
   </nav>
   <router-outlet></router-outlet>
 </section>
