--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -15,6 +15,7 @@ $color-pink-0: #971057; // berry
 $color-pink-1: #c3106c; // cerice
 $color-pink-2: #E5007D; // pink
 
+$fs-s: 12px;
 $fs-m0: 14px;
 $fs-m: 16px;
 $fs-l: 18px;
