--- a/app/views/user/user-profile/user-profile.component.html
+++ b/app/views/user/user-profile/user-profile.component.html
@@ -1,7 +1,22 @@
 <div class="user-profile">
   <div class="subheader text-center">
     <div class="fs-l form-group">{{'profile' | translate | uppercase}}</div>
-    <div class="subheader-text">{{'profile.create.description' | translate}}</div>
+    <div class="subheader-text form-group">{{'profile.create.description' | translate}}</div>
+
+    <div class="table upload-group-container">
+      <div class="table-row">
+        <div class="table-cell upload-group">
+          <input type="file" id="image-filename" name="imageFilename" class="file" [disabled]="!editMode" (change)="onImageFilenameChange($event)" accept="image/*">
+          <div class="icon-camera opacity-over">
+            <i class="demo-icon icon-ic-camera"></i>
+            <div class="fs-s text-center">{{'profile.form.photo.choose' | translate}}</div>
+          </div>
+
+          <div class="user-info-image" [ngStyle]="{'background-image': 'url(' + userProfile.imageUrl + ')'}"></div>
+        </div>
+        <div class="table-cell fs-m">{{user.firstName}} {{user.lastName}}</div>
+      </div>
+    </div>
   </div>
 
   <div class="centered-form-container">
