--- a/app/views/user/user-profile/user-profile.component.scss
+++ b/app/views/user/user-profile/user-profile.component.scss
@@ -1,6 +1,78 @@
 @import '../../../styles/variables.scss';
 
 .user-profile {
+
+  .upload-group-container {
+    margin: 0 auto;
+
+    .upload-group {
+      cursor: pointer;
+      position: relative;
+      display: block;
+      margin-right: 50px;
+      width: 85px;
+      height: 85px;
+      border-radius: 50%;
+      background-color: rgba(255, 255, 255, 0.1);
+
+      &:hover {
+        .opacity-over {
+          opacity: 1;
+        }
+      }
+
+      .file {
+        width: 85px;
+        height: 85px;
+        opacity: 0;
+        cursor: pointer;
+
+        &[disabled] {
+          pointer-events: none;
+        }
+      }
+
+      .icon-camera {
+        width: 85px;
+        height: 85px;
+        position: absolute;
+        top: 0;
+        z-index: 1;
+        opacity: 0;
+        pointer-events: none;
+
+        .icon-ic-camera {
+          font-family: fontello;
+          color: white;
+          content: '\e822';
+          font-size: 26px;
+          margin: 20px 5px 5px 0;
+          display: inline-block;
+        }
+      }
+
+      .user-info-image {
+        background-size: cover;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        pointer-events: none;
+        transition: background .3s;
+        border-radius: 50%;
+        overflow: hidden;
+      }
+
+      .opacity-over {
+        background-color: rgba(0, 0, 0, 0.8);
+        border-radius: 50%;
+        opacity: 0;
+        transition: all 0.3s ease;
+      }
+    }
+  }
+
   .form-group {
     position: relative;
   }
