JS-37: Add more general css classes
 * Add text-left class.
 * Add min-width-column for table-cell class.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -40,6 +40,9 @@ body {
     margin-bottom: 15px;
   }
 
+  .text-left {
+    text-align: left;
+  }
   .text-center {
     text-align: center;
   }
@@ -53,6 +56,11 @@ body {
   .table-cell {
     display: table-cell;
     vertical-align: middle;
+
+    &.min-width-column {
+      white-space: nowrap;
+      width: 1px;
+    }
   }
 
   .color-dark {
