--- a/app/components/autocomplete-dropdown/autocomplete-dropdown.component.html
+++ b/app/components/autocomplete-dropdown/autocomplete-dropdown.component.html
@@ -6,10 +6,10 @@
         <!--<i class="fa" [ngClass]="[iconClass]"></i>-->
       <!--</div>-->
       <div *ngIf="isMultipleSelect" class="table-cell min-width-column items-column">
-        <deletable-item *ngFor="let item of destination" [isDisabled]="isDisabled" [labelFunction]="selectedItemLabelFunction" [item]="item"></deletable-item>
+        <deletable-item *ngFor="let item of destination" [isDisabled]="isDisabled" [labelFunction]="selectedItemLabelFunction" [item]="item" (deleteSelectedItem)="onDeleteSelectedItem($event)"></deletable-item>
       </div>
-      <div class="table-cell dropdown-text-input-container clickable" ng-class="{disabled: maxItems > 1 && destination.length >= maxItems}" ng-click="handleDownArrowClick()">
-        <input class="form-control" [disabled]="isDisabled || (maxItems > 1 && destination.length >= maxItems)" type="text" placeholder="{{placeholder}}" (change)="handleTextInputChange()" [(ngModel)]="textInput"/>
+      <div class="table-cell dropdown-text-input-container clickable" [ngClass]="{disabled: maxItems > 1 && destination && destination.length >= maxItems}" (click)="handleDownArrowClick()">
+        <input class="form-control" [disabled]="isDisabled || (maxItems > 1 && destination && destination.length >= maxItems)" type="text" placeholder="{{placeholder}}" [(ngModel)]="textInput" (ngModelChange)="onTextInputChange()"/>
         <!--<div class="drop-down-arrow" [ngClass]="{disabled: maxItems > 1 && destination.length >= maxItems, opened: isDropdownOpened}"><i class="fa" [ngClass]="{'fa-chevron-down': !isMultipleSelect, 'fa-plus': isMultipleSelect}"></i></div>-->
       </div>
     </div>
