JS-37: Display icons in user-profile properly

--- a/app/views/user/user-profile/user-profile.component.scss
+++ b/app/views/user/user-profile/user-profile.component.scss
@@ -76,6 +76,7 @@
   }
   .form-group:before {
     position: absolute;
+    font-family: fontello;
     left: -35px;
     font-size: 20px;
     color: $color-gray-2;
