--- a/app/components/autocomplete-dropdown/autocomplete-dropdown.component.html
+++ b/app/components/autocomplete-dropdown/autocomplete-dropdown.component.html
@@ -1,4 +1,4 @@
-<div class="autocomplete-dropdown text-left" [ngClass]="{disabled: isDisabled, 'wrap-mode': wrapMode}">
+<div class="autocomplete-dropdown text-left" [ngClass]="{disabled: isDisabled, 'wrap-mode': wrapMode}" (keyup.enter)="onEnterClick()" (keyup.arrowup)="onArrowUpClick()" (keyup.arrowdown)="onArrowDownClick()">
   <div class="table autocomplete-dropdown-container"
        [ngClass]="{'multiple-select' : isMultipleSelect, selected: textInput && !isMultipleSelect}">
     <div class="table-row">
@@ -8,7 +8,7 @@
       <div *ngIf="isMultipleSelect" class="table-cell min-width-column items-column">
         <deletable-item *ngFor="let item of destination" [isDisabled]="isDisabled" [labelFunction]="selectedItemLabelFunction" [item]="item" (deleteSelectedItem)="onDeleteSelectedItem($event)"></deletable-item>
       </div>
-      <div class="table-cell dropdown-text-input-container clickable" [ngClass]="{disabled: maxItems > 1 && destination && destination.length >= maxItems}" (click)="onDownArrowClick()">
+      <div class="table-cell dropdown-text-input-container clickable" [ngClass]="{disabled: maxItems > 1 && destination && destination.length >= maxItems}" (click)="onInputClick()">
         <input class="form-control" [disabled]="isDisabled || (maxItems > 1 && destination && destination.length >= maxItems)" type="text" placeholder="{{placeholder}}" [(ngModel)]="textInput" (ngModelChange)="onTextInputChange()"/>
         <div class="drop-down-arrow" [ngClass]="{disabled: maxItems > 1 && destination && destination.length >= maxItems}"><i class="icon-ic-arrow-bottom"></i></div>
       </div>
