--- a/app/components/autocomplete-dropdown/autocomplete-dropdown.component.scss
+++ b/app/components/autocomplete-dropdown/autocomplete-dropdown.component.scss
@@ -1,4 +1,4 @@
-@import "../variables.scss";
+@import "../../styles/variables.scss";
 
 $background-color: #ffffff;
 $disabled-background-color: #eeeeee;
@@ -62,7 +62,7 @@ $ms-item-text-color: #ffffff;
     -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
     box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
 
-    .autocomplete-dropdown-list-item {
+    >>> .autocomplete-dropdown-list-item {
       display: block;
       padding: 3px 20px;
       clear: both;
@@ -83,7 +83,7 @@ $ms-item-text-color: #ffffff;
     }
 
     .selected-autocomplete-item {
-      .autocomplete-dropdown-list-item {
+      >>> .autocomplete-dropdown-list-item {
         background-color: $color-gray-3;
       }
     }
@@ -100,7 +100,7 @@ $ms-item-text-color: #ffffff;
       cursor: not-allowed;
     }
 
-    .deletable-item {
+    >>> .deletable-item {
       background-color: $disabled-background-color;
     }
 
@@ -118,7 +118,7 @@ $ms-item-text-color: #ffffff;
           width: auto;
         }
 
-        .deletable-item {
+        >>> .deletable-item {
           white-space: normal;
         }
 
@@ -139,7 +139,7 @@ $ms-item-text-color: #ffffff;
   }
 }
 
-.deletable-item {
+>>> .deletable-item {
   position: relative;
   display: inline-block;
   background-color: $color-gray-3;
@@ -163,7 +163,7 @@ $ms-item-text-color: #ffffff;
           width: 1px;
         }
 
-        .deletable-item {
+        >>> .deletable-item {
           white-space: nowrap;
         }
 
