JS-37: Add disabled class in clickable

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -31,6 +31,13 @@ body {
 
   .clickable {
     cursor: pointer;
+
+    &.disabled {
+      box-shadow: none;
+      cursor: not-allowed;
+      opacity: 0.95;
+      pointer-events: none;
+    }
   }
 
   .block {
