--- a/app/components/autocomplete-dropdown/autocomplete-dropdown.component.html
+++ b/app/components/autocomplete-dropdown/autocomplete-dropdown.component.html
@@ -1,4 +1,4 @@
-<div class="autocomplete-dropdown text-left" [ngClass]="{disabled: isDisabled, 'wrap-mode': wrapMode}" (keyup.enter)="onEnterClick()" (keyup.arrowup)="onArrowUpClick()" (keyup.arrowdown)="onArrowDownClick()">
+<div class="autocomplete-dropdown text-left" [ngClass]="{disabled: isDisabled, 'wrap-mode': wrapMode}" (keyup.enter)="onEnterClick()" (keyup.arrowup)="onArrowClick(true)" (keyup.arrowdown)="onArrowClick(false)">
   <div class="table autocomplete-dropdown-container"
        [ngClass]="{'multiple-select' : isMultipleSelect, selected: textInput && !isMultipleSelect}">
     <div class="table-row">
