--- a/app/views/user/user-register/user-register.component.html
+++ b/app/views/user/user-register/user-register.component.html
@@ -78,9 +78,12 @@
       </div>
 
       <div class="material-group">
-        <input id="at-und" [(ngModel)]="userRegister.atUndStatus" name="atUndStatus" class="material-input"
-               ng2-auto-complete [source]="atUndStatuses" display-property-name="name" required/>
-        <label for="at-und" class="label-up material-label">{{'user.form.at_und' | translate}}</label>
+        <autocomplete-dropdown [lookupType]="'list'" [enumList]="atUndStatuses"
+                               [(destination)]="userRegister.atUndStatus"
+                               [autocompleteResultLabelFunction]="namePropertyLabel"
+                               [selectedItemLabelFunction]="namePropertyLabel">
+        </autocomplete-dropdown>
+        <label class="label-up material-label">{{'user.form.at_und' | translate}}</label>
 
         <div class="fs-m0 material-group-error" *ngIf="form.controls.atUndStatus && form.controls.atUndStatus.invalid && form.controls.atUndStatus.touched">
           {{'user.form.at_und.validation' | translate}}
