--- a/app/views/user/user-register/user-register.component.html
+++ b/app/views/user/user-register/user-register.component.html
@@ -68,9 +68,12 @@
       </div>
 
       <div class="material-group">
-        <input id="current-status" [(ngModel)]="userRegister.currentStatus" name="currentStatus" class="material-input"
-               ng2-auto-complete [source]="statuses" value-property-name="''" display-property-name="name" required/>
-        <label for="current-status" class="label-up material-label">{{'user.form.current_status' | translate}}</label>
+        <autocomplete-dropdown [lookupType]="'list'" [enumList]="statuses"
+                               [(destination)]="userRegister.currentStatus"
+                               [autocompleteResultLabelFunction]="namePropertyLabel"
+                               [selectedItemLabelFunction]="namePropertyLabel">
+        </autocomplete-dropdown>
+        <label class="label-up material-label">{{'user.form.current_status' | translate}}</label>
 
         <div class="fs-m0 material-group-error" *ngIf="form.controls.currentStatus && form.controls.currentStatus.invalid && form.controls.currentStatus.touched">
           {{'user.form.current_status.validation' | translate}}
