--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -60,8 +60,10 @@ body {
 
   .table {
     display: table;
-    width: 100%;
-    margin: 0;
+
+    &.max-width {
+      width: 100%;
+    }
   }
   .table-row {
     display: table-row;
